# mcp-twill

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mcp-twill/: Cargo.toml
crates/mcp-twill-host/: Cargo.toml
crates/mcp-twill-host/src/: lib.rs
crates/mcp-twill-host/tests/: host.rs
crates/mcp-twill/examples/: issues_server.rs  native_surface_server.rs
crates/mcp-twill/src/: ambient_resources.rs  argument_schemas.rs  builder.rs  catalog.rs  contract.rs  conversation_identity.rs  error.rs  event.rs  help.rs  lib.rs  model.rs  native_surfaces.rs  presentation.rs  registry.rs  resource.rs  response.rs  results.rs  rmcp_adapter.rs  runtime.rs  stateless.rs  stateless_wire.rs  tasks.rs  tasks_extension_wire.rs  template.rs  types.rs
crates/mcp-twill/tests/: ambient_resources.rs  argument_schemas.rs  builder.rs  capabilities.rs  contract.rs  conversation_identity.rs  core.rs  events.rs  guidance.rs  mcp.rs  mcp_task_fixture.rs  native_surfaces.rs  presentation.rs  resources.rs  results.rs  tasks.rs  types.rs  vbl_fixture.rs  workspace.rs
crates/mcp-twill/tests/fixtures/mcp/tasks/: core-transports.mdx  core-wire-vectors.json  extension-schema.json  extension-sep-2663.md  extension-tasks.md  extension-wire-vectors.json  legacy-wire-vectors.json  manifest.json
crates/mcp-twill/tests/fixtures/vbl/v0.4.9/: application-error-vectors.json  baseline-tools.json  manifest.json  presentation-vectors.json  surface-catalog.json
crates/mcp-twill/tests/support/: vbl.rs  vbl_native.rs  vbl_presentation.rs
crates/mcp-workspace-resolver/: Cargo.toml
crates/mcp-workspace-resolver/src/: codex.rs  diagnostics.rs  lib.rs  observation.rs  path.rs  requirement.rs  resolve.rs  rmcp.rs
crates/mcp-workspace-resolver/tests/: path.rs  resolver.rs  rmcp.rs  serde.rs
docs/: research.md
docs/adoption/visible-browser-lab/: gap-map.md
docs/rfcs/: 0000-template.md  0001-authoritative-command-surface.md  0002-diagnostics-steering-response-profiles.md  0003-permission-preview-confirmation.md  0004-runtime-workspace-contracts.md  0005-effect-lane-tool-surface.md  0006-author-ergonomics.md  0007-workspace-resolution-crate.md  README.md
docs/rfcs/stage-0/: 00008-named-argument-types-and-unions.md  00009-handler-visible-workspace-roots.md  0008-named-argument-types-and-unions.md  0009-handler-visible-workspace-roots.md  0010-declared-preconditions.md  0011-guidance-decomposition.md  0012-first-class-resources.md  0013-conversation-identity-request-context.md  0014-application-result-contracts.md  0015-catalog-derived-native-tool-surfaces.md  0016-ambient-resource-binding.md  0017-schema-constrained-arguments.md  0018-declared-invocation-and-confirmation-presentation.md  0019-catalog-derived-host-adapters.md  0020-protocol-versioned-task-delivery.md
docs/rfcs/stage-1/: 0004-runtime-workspace-contracts.md  0007-workspace-resolution-crate.md  0009-handler-visible-workspace-roots.md  0010-declared-preconditions.md  0011-guidance-decomposition.md  (+7 more)
examples/: issues_server.rs
src/: catalog.rs  contract.rs  error.rs  lib.rs  model.rs  registry.rs  response.rs  rmcp_adapter.rs
tests/: builder.rs  contract.rs  core.rs  mcp.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  mcp_task_fixture.rs  vbl_fixture.rs
(+10 files in other folders)
