[package]
name = "mcp-twill-host"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Runtime host for mcp-twill servers: process-level identity and effect-aware retry policy."

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
mcp-twill = { path = "../mcp-twill" }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
