[package]
name = "mcp-twill"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust MCP framework for CLI-shaped command templates over typed values."

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
mcp-workspace-resolver = { path = "../mcp-workspace-resolver", features = ["rmcp"] }
rand = "0.8"
rmcp = { version = "1.7.0", features = ["client", "transport-io"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
anyhow = "1"
futures = "0.3"

[lib]
name = "mcp_twill"
path = "src/lib.rs"

[[example]]
name = "issues_server"
path = "examples/issues_server.rs"
test = true

[[example]]
name = "native_surface_server"
path = "examples/native_surface_server.rs"
test = true
