[package]
name = "mcp-workspace-resolver"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Resolve named workspace roots from MCP roots, Codex sandbox metadata, and declared workspaces."

[dependencies]
rmcp = { version = "1.7.0", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[features]
rmcp = ["dep:rmcp"]

[lib]
name = "mcp_workspace_resolver"
path = "src/lib.rs"
